GL/Projet_GL/src/test/deca/context/valid/sansObjet/while/valid_while_with_boolean_expr.deca
// Test : valid_computed_boolean_condition
// But : autoriser une condition booléenne calculée dans un while.
// Couvre : expressions booléennes, boucle while.
// Résultat attendu : programme valide.

{
    boolean b;
    b = true;
    while (b && true) {
        b = false;
    }
}