GL/Projet_GL/src/test/deca/context/invalid/sansObjet/while/invalid_while_int_condition.deca
// Test : while_condition_int
// But : interdire une condition while non booléenne.
// Couvre : typage des conditions.
// Résultat attendu : erreur contextuelle.

{
    while (1) {
        println("x");
    }
}

//While condition must be of type boolean